# manifold-microscope

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
experiment_scripts/: model_configs.py
experiment_scripts/manifold_analysis/: analysis.py
experiment_scripts/manifold_fitting/: analysis.py  inference.py  mmls.py  training.py
experiment_scripts/toy_manifolds_experiment/: fit_and_get_measures.py  manifold_fitting_denoising_autoencoder.py  manifold_fitting_no_noise.py
microscope/: cyclic_dimensions.py  patches.py
microscope/computations_grid/: basic.py  curvature.py  reach.py  volume.py
microscope/computations_grid/data_analysis/: data_analysis.py  merge_analysis_outputs.py  run_data_analysis.py
microscope/computations_grid/tests/: test_basic.py  test_curvature.py  test_reach.py  test_volume.py
microscope/datasets/: coil20.py  custom_dsprites.py  dataset_split.py  generic_dataset_loader.py  image_transforms.py  noise_adding.py  original_dsprites.py  toy_manifolds.py
microscope/manifold_examples/: ellipsoid.py  hyperboloid.py  plotting.py  sampling_grid.py  sampling_uniform.py  sphere.py  symbolic_computations.py  utils.py
microscope/manifold_examples/tests/: test_ellipsoid.py  test_hyperboloid.py  test_symbolic_computations.py
microscope/tests/: test_patches.py
notebooks/datasets_and_measures/: image_datasets.ipynb  toy_manifold_datasets.ipynb
notebooks/manifold_fitting/: bound_curves_all_datasets_mmls.ipynb  bound_curves_all_dims_dsprites_mmls.ipynb  bound_curves_all_methods.ipynb
representation_learning/beta_vae/: NOTICE.md  README.md  dataset.py  inference_intermediate_layers.py  main.py  model.py  solver.py  utils.py
